BD Routes for ticket is done

--- a/bd/.env.dev
+++ b/bd/.env.dev
@@ -9,6 +9,7 @@ DB_URI=mongodb://localhost:27017/myapp
 # JWT Authentication
 JWT_SECRET=my_super_secret_jwt_key
 JWT_EXPIRES_IN=3600
+SALT_ROUNT=10
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
