--- a/fd/tsconfig.json
+++ b/fd/tsconfig.json
@@ -18,7 +18,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "strictNullChecks": true
   },
   "include": [
     "src"
