--- a/bd/package.json
+++ b/bd/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
