--- a/fd/package.json
+++ b/fd/package.json
@@ -21,8 +21,7 @@
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
-    "lodash.debounce": "^4.0.8",
+    "luxon": "^3.7.1",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -43,6 +42,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/luxon": "^3.7.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
