build code setup

--- a/bd/.env.dev
+++ b/bd/.env.dev
@@ -4,7 +4,7 @@ PORT=3300
 NODE_ENV=dev
 
 # Database (for MongoDB)
-DB_URI=mongodb://localhost:27017/myapp
+DB_URI=mongodb+srv://shenron:V8eOsUpWDGMQlzUL@cluster0.u9xbvoa.mongodb.net/task_manager
 
 # JWT Authentication
 JWT_SECRET=my_super_secret_jwt_key
