--- a/fd/package.json
+++ b/fd/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "fd",
+  "name": "nfex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite --mode dev",
+    "dev:build": "tsc -b && vite build --mode dev",
+    "prod": "vite --mode prod",
+    "prod:build": "tsc -b && vite build --mode prod",
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,11 +23,12 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
-    "@sentry/react": "^9.42.0",
-    "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-query-devtools": "^5.83.0",
-    "axios": "^1.10.0",
+    "@sentry/react": "^10.0.0",
+    "@tanstack/react-query": "^5.84.0",
+    "@tanstack/react-query-devtools": "^5.84.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "http-status-codes": "^2.3.0",
     "luxon": "^3.7.1",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
@@ -28,44 +36,40 @@
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
-    "react-virtualized": "^9.22.6",
-    "redux": "^5.0.1",
+    "react-router-dom": "^7.7.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.1",
-    "zod": "^4.0.13"
+    "sass": "^1.90.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
     "@types/luxon": "^3.7.1",
-    "@types/react": "^19.1.8",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.6",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "cypress": "^14.5.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.32.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "husky": "^9.1.7",
-    "jest": "^30.0.5",
+    "husky": "^8.0.0",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
     "msw": "^2.10.4",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
