--- a/fd/tsconfig.json
+++ b/fd/tsconfig.json
@@ -1,28 +1,11 @@
 {
-  // "files": [],
-  // "references": [
-  //   {
-  //     "path": "./tsconfig.app.json"
-  //   },
-  //   {
-  //     "path": "./tsconfig.node.json"
-  //   }
-  // ],
-  "compilerOptions": {
-    "baseUrl": "src",
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
     },
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "module": "esnext",
-    "strictNullChecks": true
-  },
-  "include": [
-    "src"
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
