--- a/bd/package.json
+++ b/bd/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.13",
     "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.1",
     "mongoose": "^8.16.2",
     "zod": "^3.25.75"
   },
@@ -31,6 +31,7 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/luxon": "^3.7.1",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.10",
     "@types/supertest": "^6.0.3",
