--- a/fd/package.json
+++ b/fd/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.90.0",
     "zod": "^4.0.14"
